death and emrollee numbers added to HRs - forest plot for sepsis results

--- a/code/data-analysis/config-file-generator.Rmd
+++ b/code/data-analysis/config-file-generator.Rmd
@@ -790,3 +790,48 @@ for (i in seq(1,length(expo),1)){
   file.remove(f)
 }
 ```
+
+```{r ses adj. model no2 < 7}
+dataname <- "-no27"
+expo <- poll
+
+for (i in seq(1,length(expo),1)){
+  filenames <- c( tempfile())
+  for( f in  filenames ){
+    cat(config.ses, file=f)
+    x <- readLines(f)
+    y <- gsub("-dataset", dataname, x)
+    z <- gsub("exposure", expo[i], y)
+    for (j in seq(1,length(cuz),1)){
+      w <- gsub("outcome", cuz[j], z)
+      cat(w, file=f, sep="\n")
+      k=j+length(cuz)*(i-1)
+      writeLines(w, here('config-files','no27', paste(k,'.txt', sep = "")))
+    }
+  }
+  file.remove(f)
+}
+```
+
+
+```{r ses adj. model no2 < 12}
+dataname <- "-no212"
+expo <- poll
+
+for (i in seq(1,length(expo),1)){
+  filenames <- c( tempfile())
+  for( f in  filenames ){
+    cat(config.ses, file=f)
+    x <- readLines(f)
+    y <- gsub("-dataset", dataname, x)
+    z <- gsub("exposure", expo[i], y)
+    for (j in seq(1,length(cuz),1)){
+      w <- gsub("outcome", cuz[j], z)
+      cat(w, file=f, sep="\n")
+      k=j+length(cuz)*(i-1)
+      writeLines(w, here('config-files','no212', paste(k,'.txt', sep = "")))
+    }
+  }
+  file.remove(f)
+}
+```
