--- a/code/data-analysis/death-data-distribution.Rmd
+++ b/code/data-analysis/death-data-distribution.Rmd
@@ -20,7 +20,37 @@ load(paste0(dirUSSpatial,'state-region.RDa'))
 load(here('data','processed','dead-enrollee.RDa'))
 ```
 
+```{r Outcome to Cause }
+Outcome.to.Cause <- tribble(
+  ~Cause, ~Outcome,
+  "All-Cause", "allcuz",
+  "Non-Accidental", "nacc",
+  "Accidental", "acc",
+  "Cardiovascular", "cvd",
+  "IHD", "ihd",
+  "CHF", "chf",
+  "CBV", "cbv",
+  "Respiratory", "resp",
+  "COPD", "copd",
+  "Pneumonia", "pneu",
+  "URI", "uri",
+  "ARDS", "ards",
+  "Cancer", "canc",
+  "Lung Cancer", "lungc",
+  "Sepsis", "seps",
+  "Vascular dementia", "VaD",
+  "Alzheimer", "AD",
+  "Neurodegeneration", "NeD",
+  "Unspecified Dementia", "UsD",
+  "Type1 Diabetes", "diabt1",
+  "Type2 Diabetes", "diabt2",
+  "Diabetes", "diab",
+  "Kidney Disease", "kidn"
+)
+```
+
 ```{r data}
+#Done
 dt.dead.enrollee <- read.csv(
   here('data', 'processed','enrollee_pm_dead.csv'))
 
@@ -31,69 +61,97 @@ dt.dead.enrollee <- dt.state.region %>%
             region = Region.IV) %>% 
   right_join(dt.dead.enrollee)
 ```
-
-```{r}
-dt.dead.enrollee %>% 
+# PM2.5
+```{r - PM2.5}
+## Total Base
+x1 <- dt.dead.enrollee %>% 
   summarise(across(allcuz:kidn, sum)) %>% 
   mutate(Subgroup = "Total", 
-         Value = "Total") %>% 
+         Value = "Base") %>% 
   select(Subgroup, Value, everything())
-```
 
+## Total SES
+x11 <- dt.dead.enrollee %>% 
+  summarise(across(allcuz:kidn, sum)) %>% 
+  mutate(Subgroup = "Total", 
+         Value = "SES") %>% 
+  select(Subgroup, Value, everything())
 
-```{r}
-dt.dead.enrollee %>% 
+## Total Residual
+x12 <- dt.dead.enrollee %>% 
+  summarise(across(allcuz:kidn, sum)) %>% 
+  mutate(Subgroup = "Total", 
+         Value = "Residual") %>% 
+  select(Subgroup, Value, everything())
+
+## Age
+x2 <- dt.dead.enrollee %>% 
   group_by(ENROLLEE_AGE > 75) %>% 
   summarise(across(allcuz:kidn, sum)) %>% 
   mutate(Subgroup = "Age", 
          Value = ifelse(`ENROLLEE_AGE > 75` == "FALSE", "LE75", "M75")) %>% 
   select(Subgroup, Value, everything(), -`ENROLLEE_AGE > 75`)
-```
 
-
-```{r}
-dt.dead.enrollee %>% 
+## Sex
+x3 <- dt.dead.enrollee %>% 
   group_by(sex) %>% 
   summarise(across(allcuz:kidn, sum)) %>% 
   mutate(Subgroup = "Sex", 
          Value = sex) %>% 
   select(Subgroup, Value, everything(), -sex)
-```
 
-
-```{r}
-dt.dead.enrollee %>% 
+## Race
+x4 <- dt.dead.enrollee %>% 
   group_by(race) %>% 
   summarise(across(allcuz:kidn, sum)) %>% 
   mutate(Subgroup = "Race", 
          Value = race) %>% 
   select(Subgroup, Value, everything(), -race)
-```
 
-
-```{r}
-dt.dead.enrollee %>% 
+## Urbanicity
+x5 <- dt.dead.enrollee %>% 
   group_by(urban) %>% 
   summarise(across(allcuz:kidn, sum)) %>% 
   mutate(Subgroup = "Urbanicity", 
-         Value = ifelse(urban == 1, "urban", "non-urban")) %>% 
+         Value = ifelse(urban == 1, "urban", "nonurban")) %>% 
   select(Subgroup, Value, everything(), -urban)
-```
 
-
-```{r}
-dt.dead.enrollee %>% 
+## SES Category
+x6 <- dt.dead.enrollee %>% 
   group_by(ses_tertile) %>% 
   summarise(across(allcuz:kidn, sum)) %>% 
-  mutate(Subgroup = "SES Category", 
-         Value = ifelse(ses_tertile == 0, "Low",
-                        ifelse(ses_tertile == 1, "Middle", "High"))) %>% 
+  mutate(Subgroup = "SES Cat", 
+         Value = ifelse(ses_tertile == 0, "L",
+                        ifelse(ses_tertile == 1, "M", "H"))) %>% 
   select(Subgroup, Value, everything(), -ses_tertile)
-```
 
+## BRFSS Base
+x7 <- dt.dead.enrollee %>% 
+  filter(!is.na(X_bmi_Mean)) %>% 
+  summarise(across(allcuz:kidn, sum)) %>% 
+  mutate(Subgroup = "BRFSS", 
+         Value = "brfss0") %>% 
+  select(Subgroup, Value, everything())
 
-```{r}
-dt.dead.enrollee %>% 
+## BRFSS Adj
+x71 <- dt.dead.enrollee %>% 
+  filter(!is.na(X_bmi_Mean)) %>% 
+  summarise(across(allcuz:kidn, sum)) %>% 
+  mutate(Subgroup = "BRFSS", 
+         Value = "brfss") %>% 
+  select(Subgroup, Value, everything())
+
+## RC4
+x8 <- dt.dead.enrollee %>% 
+  summarise(across(cvd_rc:kidn_rc, sum)) %>% 
+  mutate(Subgroup = "Total", 
+         Value = "RC4") %>% 
+  select(Subgroup, Value, everything())
+
+colnames(x8) <-  sub("_rc*", "", colnames(x8))
+
+## Region
+x9 <- dt.dead.enrollee %>% 
   group_by(region) %>% 
   summarise(across(allcuz:kidn, sum)) %>% 
   mutate(Subgroup = "Region", 
@@ -101,29 +159,171 @@ dt.dead.enrollee %>%
                         ifelse(region == 2, "MW", 
                                ifelse(region == 3, "S", "NE")))) %>% 
   select(Subgroup, Value, everything(), -region)
+
+## Combine
+x <- x1 %>% 
+  add_row(x11) %>% 
+  add_row(x12) %>% 
+  add_row(x2) %>% 
+  add_row(x3) %>% 
+  add_row(x4) %>% 
+  add_row(x5) %>% 
+  add_row(x6) %>% 
+  add_row(x7) %>% 
+  add_row(x71) %>% 
+  add_row(x8) %>% 
+  add_row(x9) %>% 
+  mutate(Index = "PM25") %>% 
+  select(Index, everything())
 ```
 
-```{r}
-dt.dead.enrollee %>% 
+# NO2
+```{r - NO2}
+## Total Base
+y1 <- dt.dead.enrollee %>% 
+  filter(!is.na(no2_1yr)) %>% 
+  summarise(across(allcuz:kidn, sum)) %>% 
+  mutate(Subgroup = "Total", 
+         Value = "Base") %>% 
+  select(Subgroup, Value, everything())
+
+## Total SES
+y11 <- dt.dead.enrollee %>% 
+  filter(!is.na(no2_1yr)) %>% 
+  summarise(across(allcuz:kidn, sum)) %>% 
+  mutate(Subgroup = "Total", 
+         Value = "SES") %>% 
+  select(Subgroup, Value, everything())
+
+## Total Residual
+y12 <- dt.dead.enrollee %>% 
+  filter(!is.na(no2_1yr)) %>% 
+  summarise(across(allcuz:kidn, sum)) %>% 
+  mutate(Subgroup = "Total", 
+         Value = "Residual") %>% 
+  select(Subgroup, Value, everything())
+
+## Age
+y2 <- dt.dead.enrollee %>% 
+  filter(!is.na(no2_1yr)) %>% 
+  group_by(ENROLLEE_AGE > 75) %>% 
+  summarise(across(allcuz:kidn, sum)) %>% 
+  mutate(Subgroup = "Age", 
+         Value = ifelse(`ENROLLEE_AGE > 75` == "FALSE", "LE75", "M75")) %>% 
+  select(Subgroup, Value, everything(), -`ENROLLEE_AGE > 75`)
+
+## Sex
+y3 <- dt.dead.enrollee %>% 
+  filter(!is.na(no2_1yr)) %>% 
+  group_by(sex) %>% 
+  summarise(across(allcuz:kidn, sum)) %>% 
+  mutate(Subgroup = "Sex", 
+         Value = sex) %>% 
+  select(Subgroup, Value, everything(), -sex)
+
+## Race
+y4 <- dt.dead.enrollee %>% 
+  filter(!is.na(no2_1yr)) %>% 
+  group_by(race) %>% 
+  summarise(across(allcuz:kidn, sum)) %>% 
+  mutate(Subgroup = "Race", 
+         Value = race) %>% 
+  select(Subgroup, Value, everything(), -race)
+
+## Urbanicity
+y5 <- dt.dead.enrollee %>% 
+  filter(!is.na(no2_1yr)) %>% 
+  group_by(urban) %>% 
+  summarise(across(allcuz:kidn, sum)) %>% 
+  mutate(Subgroup = "Urbanicity", 
+         Value = ifelse(urban == 1, "urban", "nonurban")) %>% 
+  select(Subgroup, Value, everything(), -urban)
+
+## SES Category
+y6 <- dt.dead.enrollee %>% 
+  filter(!is.na(no2_1yr)) %>% 
+  group_by(ses_tertile) %>% 
+  summarise(across(allcuz:kidn, sum)) %>% 
+  mutate(Subgroup = "SES Cat", 
+         Value = ifelse(ses_tertile == 0, "L",
+                        ifelse(ses_tertile == 1, "M", "H"))) %>% 
+  select(Subgroup, Value, everything(), -ses_tertile)
+
+## BRFSS Base
+y7 <- dt.dead.enrollee %>% 
+  filter(!is.na(no2_1yr)) %>% 
   filter(!is.na(X_bmi_Mean)) %>% 
   summarise(across(allcuz:kidn, sum)) %>% 
   mutate(Subgroup = "BRFSS", 
-         Value = "BRFSS") %>% 
+         Value = "brfss0") %>% 
   select(Subgroup, Value, everything())
-```
 
-```{r}
-dt.dead.enrollee %>% 
+## BRFSS Adj
+y71 <- dt.dead.enrollee %>% 
   filter(!is.na(no2_1yr)) %>% 
+  filter(!is.na(X_bmi_Mean)) %>% 
   summarise(across(allcuz:kidn, sum)) %>% 
-  mutate(group = "total")
+  mutate(Subgroup = "BRFSS", 
+         Value = "brfss") %>% 
+  select(Subgroup, Value, everything())
+
+## RC4
+y8 <- dt.dead.enrollee %>% 
+  filter(!is.na(no2_1yr)) %>% 
+  summarise(across(cvd_rc:kidn_rc, sum)) %>% 
+  mutate(Subgroup = "Total", 
+         Value = "RC4") %>% 
+  select(Subgroup, Value, everything())
+
+colnames(y8) <-  sub("_rc*", "", colnames(y8))
+
+## Region
+y9 <- dt.dead.enrollee %>% 
+  filter(!is.na(no2_1yr)) %>% 
+  group_by(region) %>% 
+  summarise(across(allcuz:kidn, sum)) %>% 
+  mutate(Subgroup = "Region", 
+         Value = ifelse(region == 1, "W",
+                        ifelse(region == 2, "MW", 
+                               ifelse(region == 3, "S", "NE")))) %>% 
+  select(Subgroup, Value, everything(), -region)
+
+## Combine
+y <- y1 %>% 
+  add_row(y11) %>% 
+  add_row(y12) %>% 
+  add_row(y2) %>% 
+  add_row(y3) %>% 
+  add_row(y4) %>% 
+  add_row(y5) %>% 
+  add_row(y6) %>% 
+  add_row(y7) %>% 
+  add_row(y71) %>% 
+  add_row(y8) %>% 
+  add_row(y9) %>% 
+  mutate(Index = "NO2") %>% 
+  select(Index, everything())
+
 ```
 
-```{r}
-dt.dead.enrollee %>% 
-  summarise(across(cvd_rc:kidn_rc, sum)) %>% 
-  mutate(group = "total")
+# PM2.5 and NO2
+```{r - Combine PM2.5 and NO2}
+death.summary <- x %>% 
+  add_row(y) %>% 
+  pivot_longer(cols = allcuz:kidn,
+               names_to = "Outcome",
+               values_to = "Death") %>% 
+  merge(Outcome.to.Cause) %>% 
+  select(Index, Cause, Subgroup, Value, Death) %>% 
+  arrange(Index, Subgroup, Value)
+
+save(death.summary, file = here('output','analysis','death-summary.RDa'))
+write.csv(death.summary, 
+          file = here('output','analysis','death-summary.csv'))
 ```
+
+
+
 
 
 
