--- a/code/data-viz/forest-plots.Rmd
+++ b/code/data-viz/forest-plots.Rmd
@@ -1,5 +1,8 @@
 ---
 title: "Forest Plots"
+author: "Fatemeh Kazemi"
+date: "4/25/2021"
+output: html_document
 ---
 
 ```{r}
@@ -13,12 +16,19 @@ library(readxl)
 library(forestplot)
 library(scales)
 ```
-```{r}
+
+```{r load analysis results}
 sepsis.pm25 <- as.data.frame(read_excel(here('output', 'analysis', 'sepsis.xlsx'), 
                                     sheet = "PM25"))
 
 sepsis.no2 <- as.data.frame(read_excel(here('output', 'analysis', 'sepsis.xlsx'), 
                                     sheet = "NO2"))
+
+type1Diab.pm25 <- as.data.frame(read_excel(here('output', 'analysis', 
+                                                'type1Diabetes.xlsx'), sheet = "PM25"))
+
+type1Diab.no2 <- as.data.frame(read_excel(here('output', 'analysis', 
+                                               'type1Diabetes.xlsx'), sheet = "NO2"))
 ```
 
 ```{r - Sepsis - PM2.5}
@@ -39,13 +49,13 @@ hr <- ifelse(!is.na(sepsis.pm25$`Point Estimate`),
                    sprintf("%.3f", sepsis.pm25$High), ")", sep=""), NA)
 
 ## The rest of the columns in the table. 
-tabletext.pm <- cbind(c("Subgroup","\n",sepsis.pm25$Variable),
-                   c("Enrollee (%)","\n",np),
-                   c("Sepsis Death (%)","\n",yp),
-                   c("Hazard Ratio (95% CI)","\n",hr))
+tabletext.pm <- cbind(c("Subgroup","\n", sepsis.pm25$Variable),
+                   c("Enrollee # (%)","\n", np),
+                   c("Sepsis Death # (%)","\n", yp),
+                   c("Hazard Ratio (95% CI)","\n", hr))
 
 jpeg(here('output','plot','sepsis-pm25.jpeg'), width = 12, height = 12, 
-     units = 'in', res = 300)
+     units = 'in', res = 600)
 forestplot(labeltext = tabletext.pm, 
            mean = c(NA, NA, sepsis.pm25$`Point Estimate`), 
            lower = c(NA, NA, sepsis.pm25$Low), 
@@ -56,13 +66,13 @@ forestplot(labeltext = tabletext.pm,
            graph.pos = 4,
            hrzl_lines = gpar(col = "#444444"),
            zero = 1, 
-           colgap = unit(5,"mm"),
+           colgap = unit(5, "mm"),
            col = fpColors(box = "darkblue", 
                           lines = "darkblue", 
                           zero = "red"),
            txt_gp = fpTxtGp(label = gpar(cex = 1.2),
-                          ticks = gpar(cex = 1.2),
-                          title = gpar(cex = 2, fontface = 2)),
+                            ticks = gpar(cex = 1.2),
+                            title = gpar(cex = 2, fontface = 2)),
            grid = T,
            lwd.ci = 2, 
            ci.vertices = T, 
@@ -72,7 +82,7 @@ forestplot(labeltext = tabletext.pm,
 dev.off()
 ```
 
-```{r - Sepsis NO2}
+```{r - Sepsis - NO2}
 ## Labels defining subgroups are a little indented!
 subgps <- c(2,3,6,7,10,11,14,15,16,17,20,21,24,25,26,29,30)
 sepsis.no2$Variable[subgps] <- paste("  ",sepsis.no2$Variable[subgps]) 
@@ -90,13 +100,13 @@ hr <- ifelse(!is.na(sepsis.no2$`Point Estimate`),
                    sprintf("%.3f", sepsis.no2$High), ")", sep=""), NA)
 
 ## The rest of the columns in the table. 
-tabletext.no2 <- cbind(c("Subgroup","\n",sepsis.no2$Variable),
-                   c("Enrollee (%)","\n",np),
-                   c("Sepsis Death (%)","\n",yp),
-                   c("Hazard Ratio (95% CI)","\n",hr))
+tabletext.no2 <- cbind(c("Subgroup","\n", sepsis.no2$Variable),
+                   c("Enrollee # (%)","\n", np),
+                   c("Sepsis Death # (%)","\n", yp),
+                   c("Hazard Ratio (95% CI)","\n", hr))
 
 jpeg(here('output','plot','sepsis-no2.jpeg'), width = 12, height = 12, 
-     units = 'in', res = 300)
+     units = 'in', res = 600)
 forestplot(labeltext = tabletext.no2, 
            mean = c(NA, NA, sepsis.no2$`Point Estimate`), 
            lower = c(NA, NA, sepsis.no2$Low), 
@@ -107,7 +117,7 @@ forestplot(labeltext = tabletext.no2,
            graph.pos = 4,
            hrzl_lines = gpar(col = "#444444"),
            zero = 1, 
-           colgap = unit(5,"mm"),
+           colgap = unit(5, "mm"),
            col = fpColors(box = "darkblue",
                           line = "darkblue", 
                           zero = "red"),
@@ -123,4 +133,207 @@ forestplot(labeltext = tabletext.no2,
 dev.off()
 ```
 
+```{r - type1Diabetes - PM2.5}
+## Labels defining subgroups are a little indented!
+subgps <- c(2,3,6,7,10,11,14,15,16,17,20,21,24,25,26,29,30)
+type1Diab.pm25$Variable[subgps] <- paste("  ",type1Diab.pm25$Variable[subgps]) 
+
+## Combine the count and percent column
+np <- ifelse(!is.na(type1Diab.pm25$Enrollee), paste(comma(type1Diab.pm25$Enrollee), " (",
+                                                 type1Diab.pm25$`Enrollee Percent`,
+                                                 ")", sep=""), NA)
+yp <- ifelse(!is.na(type1Diab.pm25$Death), paste(comma(type1Diab.pm25$Death), " (", 
+                                              type1Diab.pm25$`Death Percent`, 
+                                              ")", sep=""), NA)
+hr <- ifelse(!is.na(type1Diab.pm25$`Point Estimate`), 
+             paste(sprintf("%.3f", type1Diab.pm25$`Point Estimate`), " (",
+                   sprintf("%.3f", type1Diab.pm25$Low), "-", 
+                   sprintf("%.3f", type1Diab.pm25$High), ")", sep=""), NA)
+
+## The rest of the columns in the table. 
+tabletext.pm <- cbind(c("Subgroup","\n", type1Diab.pm25$Variable),
+                   c("Enrollee # (%)","\n", np),
+                   c("T1DM Death # (%)","\n", yp),
+                   c("Hazard Ratio (95% CI)","\n", hr))
+
+jpeg(here('output','plot','type1Diab-pm25.jpeg'), width = 12, height = 12, 
+     units = 'in', res = 600)
+forestplot(labeltext = tabletext.pm, 
+           mean = c(NA, NA, type1Diab.pm25$`Point Estimate`), 
+           lower = c(NA, NA, type1Diab.pm25$Low), 
+           upper = c(NA, NA, type1Diab.pm25$High),
+           align = c("l", "l", "l", "l"),
+           is.summary = c(T, F, T, F, F, F, T, F, F, F, T, F, F, F, T, F, F, F, F, F, 
+                          T, F, F, F, T, F, F, F, F, T, F, F, F),
+           graph.pos = 4,
+           hrzl_lines = gpar(col = "#444444"),
+           zero = 1, 
+           colgap = unit(5, "mm"),
+           col = fpColors(box = "darkblue", 
+                          lines = "darkblue", 
+                          zero = "red"),
+           txt_gp = fpTxtGp(label = gpar(cex = 1.2),
+                            ticks = gpar(cex = 1.2),
+                            title = gpar(cex = 2, fontface = 2)),
+           grid = T,
+           lwd.ci = 2, 
+           ci.vertices = T, 
+           ci.vertices.height = 0.15,
+           boxsize = 0.2, 
+           title = expression(PM[2.5])) 
+dev.off()
+```
+
+```{r - type1Diab - NO2}
+## Labels defining subgroups are a little indented!
+subgps <- c(2,3,6,7,10,11,14,15,16,17,20,21,24,25,26,29,30)
+type1Diab.no2$Variable[subgps] <- paste("  ",type1Diab.no2$Variable[subgps]) 
+
+## Combine the count and percent column
+np <- ifelse(!is.na(type1Diab.no2$Enrollee), paste(comma(type1Diab.no2$Enrollee), " (",
+                                                 type1Diab.no2$`Enrollee Percent`,
+                                                 ")", sep=""), NA)
+yp <- ifelse(!is.na(type1Diab.no2$Death), paste(comma(type1Diab.no2$Death), " (", 
+                                              type1Diab.no2$`Death Percent`, 
+                                              ")", sep=""), NA)
+hr <- ifelse(!is.na(type1Diab.no2$`Point Estimate`), 
+             paste(sprintf("%.3f", type1Diab.no2$`Point Estimate`), " (",
+                   sprintf("%.3f", type1Diab.no2$Low), "-", 
+                   sprintf("%.3f", type1Diab.no2$High), ")", sep=""), NA)
+
+## The rest of the columns in the table. 
+tabletext.no2 <- cbind(c("Subgroup","\n", type1Diab.no2$Variable),
+                   c("Enrollee # (%)","\n", np),
+                   c("T1DM Death # (%)","\n", yp),
+                   c("Hazard Ratio (95% CI)","\n", hr))
+
+jpeg(here('output','plot','type1Diab-no2.jpeg'), width = 12, height = 12, 
+     units = 'in', res = 600)
+forestplot(labeltext = tabletext.no2, 
+           mean = c(NA, NA, type1Diab.no2$`Point Estimate`), 
+           lower = c(NA, NA, type1Diab.no2$Low), 
+           upper = c(NA, NA, type1Diab.no2$High),
+           align = c("l", "l", "l", "l"),
+           is.summary = c(T, F, T, F, F, F, T, F, F, F, T, F, F, F, T, F, F, F, F, F, 
+                          T, F, F, F, T, F, F, F, F, T, F, F, F),
+           graph.pos = 4,
+           hrzl_lines = gpar(col = "#444444"),
+           zero = 1, 
+           colgap = unit(5, "mm"),
+           col = fpColors(box = "darkblue",
+                          line = "darkblue", 
+                          zero = "red"),
+           txt_gp = fpTxtGp(label = gpar(cex = 1.2),
+                            ticks = gpar(cex = 1.2),
+                            title = gpar(cex = 2, fontface = 2)),
+           grid = T,
+           lwd.ci = 2, 
+           ci.vertices = T, 
+           ci.vertices.height = 0.15,
+           boxsize = 0.2, 
+           title = expression(NO[2])) 
+dev.off()
+```
+
+
+### Poster
+```{r - type1Diabetes - PM2.5}
+## Labels defining subgroups are a little indented!
+subgps <- c(2,3,6,7,10,11,14,15,16,17,20,21,24,25,26,29,30)
+type1Diab.pm25$Variable[subgps] <- paste("  ",type1Diab.pm25$Variable[subgps]) 
+
+## Combine the count and percent column
+np <- ifelse(!is.na(type1Diab.pm25$Enrollee), paste(comma(type1Diab.pm25$Enrollee), " (",
+                                                 type1Diab.pm25$`Enrollee Percent`,
+                                                 ")", sep=""), NA)
+yp <- ifelse(!is.na(type1Diab.pm25$Death), paste(comma(type1Diab.pm25$Death), " (", 
+                                              type1Diab.pm25$`Death Percent`, 
+                                              ")", sep=""), NA)
+hr <- ifelse(!is.na(type1Diab.pm25$`Point Estimate`), 
+             paste(sprintf("%.3f", type1Diab.pm25$`Point Estimate`), " (",
+                   sprintf("%.3f", type1Diab.pm25$Low), "-", 
+                   sprintf("%.3f", type1Diab.pm25$High), ")", sep=""), NA)
+
+## The rest of the columns in the table. 
+tabletext.pm <- cbind(c("Subgroup","\n", type1Diab.pm25$Variable),
+                   c("Enrollee # (%)","\n", np),
+                   c("T1DM Death # (%)","\n", yp))
+
+jpeg(here('output','plot','type1Diab-pm25-poster.jpeg'), width = 12, height = 12, 
+     units = 'in', res = 600)
+forestplot(labeltext = tabletext.pm, 
+           mean = c(NA, NA, type1Diab.pm25$`Point Estimate`), 
+           lower = c(NA, NA, type1Diab.pm25$Low), 
+           upper = c(NA, NA, type1Diab.pm25$High),
+           align = c("l", "l", "l", "l"),
+           is.summary = c(T, F, T, F, F, F, T, F, F, F, T, F, F, F, T, F, F, F, F, F, 
+                          T, F, F, F, T, F, F, F, F, T, F, F, F),
+           graph.pos = 4,
+           hrzl_lines = gpar(col = "#444444"),
+           zero = 1, 
+           colgap = unit(5, "mm"),
+           col = fpColors(box = "darkblue", 
+                          lines = "darkblue", 
+                          zero = "red"),
+           txt_gp = fpTxtGp(label = gpar(cex = 1.5, fontfamily = 'Arial'),
+                            ticks = gpar(cex = 1.5, fontface = 2, fontfamily = 'Arial'),
+                            title = gpar(cex = 3, fontface = 2, fontfamily = 'Arial')),
+           grid = T,
+           lwd.ci = 2, 
+           ci.vertices = T, 
+           ci.vertices.height = 0.15,
+           boxsize = 0.2, 
+           title = expression(PM[2.5])) 
+dev.off()
+```
+
+```{r - type1Diab - NO2}
+## Labels defining subgroups are a little indented!
+subgps <- c(2,3,6,7,10,11,14,15,16,17,20,21,24,25,26,29,30)
+type1Diab.no2$Variable[subgps] <- paste("  ",type1Diab.no2$Variable[subgps]) 
+
+## Combine the count and percent column
+np <- ifelse(!is.na(type1Diab.no2$Enrollee), paste(comma(type1Diab.no2$Enrollee), " (",
+                                                 type1Diab.no2$`Enrollee Percent`,
+                                                 ")", sep=""), NA)
+yp <- ifelse(!is.na(type1Diab.no2$Death), paste(comma(type1Diab.no2$Death), " (", 
+                                              type1Diab.no2$`Death Percent`, 
+                                              ")", sep=""), NA)
+hr <- ifelse(!is.na(type1Diab.no2$`Point Estimate`), 
+             paste(sprintf("%.3f", type1Diab.no2$`Point Estimate`), " (",
+                   sprintf("%.3f", type1Diab.no2$Low), "-", 
+                   sprintf("%.3f", type1Diab.no2$High), ")", sep=""), NA)
+
+## The rest of the columns in the table. 
+tabletext.no2 <- cbind(c("Subgroup","\n", type1Diab.no2$Variable),
+                   c("Enrollee # (%)","\n", np),
+                   c("T1DM Death # (%)","\n", yp))
+
+jpeg(here('output','plot','type1Diab-no2-poster.jpeg'), width = 12, height = 12, 
+     units = 'in', res = 600)
+forestplot(labeltext = tabletext.no2, 
+           mean = c(NA, NA, type1Diab.no2$`Point Estimate`), 
+           lower = c(NA, NA, type1Diab.no2$Low), 
+           upper = c(NA, NA, type1Diab.no2$High),
+           align = c("l", "l", "l", "l"),
+           is.summary = c(T, F, T, F, F, F, T, F, F, F, T, F, F, F, T, F, F, F, F, F, 
+                          T, F, F, F, T, F, F, F, F, T, F, F, F),
+           graph.pos = 4,
+           hrzl_lines = gpar(col = "#444444"),
+           zero = 1, 
+           colgap = unit(5, "mm"),
+           col = fpColors(box = "darkblue",
+                          line = "darkblue", 
+                          zero = "red"),
+           txt_gp = fpTxtGp(label = gpar(cex = 1.5, fontfamily = 'Arial'),
+                            ticks = gpar(cex = 1.5, fontface = 2, fontfamily = 'Arial'),
+                            title = gpar(cex = 3, fontface = 2, fontfamily = 'Arial')),
+           grid = T,
+           lwd.ci = 2, 
+           ci.vertices = T, 
+           ci.vertices.height = 0.15,
+           boxsize = 0.2, 
+           title = expression(NO[2])) 
+dev.off()
+```
 
