--- a/code/data-viz/forest-plots.Rmd
+++ b/code/data-viz/forest-plots.Rmd
@@ -54,8 +54,8 @@ tabletext.pm <- cbind(c("Subgroup","\n", sepsis.pm25$Variable),
                    c("Sepsis Death # (%)","\n", yp),
                    c("Hazard Ratio (95% CI)","\n", hr))
 
-jpeg(here('output','plot','sepsis-pm25.jpeg'), width = 12, height = 12, 
-     units = 'in', res = 600)
+jpeg(here('output','manuscript','Sepsis Paper','Figure 1 - revised.jpeg'), width = 12, height = 12, 
+     units = 'in', res = 300)
 forestplot(labeltext = tabletext.pm, 
            mean = c(NA, NA, sepsis.pm25$`Point Estimate`), 
            lower = c(NA, NA, sepsis.pm25$Low), 
