--- a/code/data-viz/forest-plots.Rmd
+++ b/code/data-viz/forest-plots.Rmd
@@ -4,6 +4,7 @@ author: "Fatemeh Kazemi"
 date: "6/12/2022"
 output: html_document
 ---
+## Source: https://www.r-bloggers.com/forest-plot-with-horizontal-bands/
 
 ```{r}
 knitr::opts_chunk$set(echo = FALSE, message = FALSE, warning = FALSE)
